--- a/index.html
+++ b/index.html
@@ -8,6 +8,32 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <div class="calculator-grid">
+        <div class="output">
+            <div class="previous-operand">Sumeet</div>
+             <div class="current-operand">Bajaj</div> 
+            </div>
+            
+            <button class="span-two" >Ac</button>
+            <button >Del</button>
+            <button >/</button>
+            <button >1</button>
+            <button >2</button>
+            <button >3</button>
+            <button >*</button>
+            <button >4</button>
+            <button >5</button>
+            <button >6</button>
+            <button >+</button>
+            <button >7</button>
+            <button >8</button>
+            <button >9</button>
+            <button >-</button>
+            <button >.</button>
+            <button >0</button>
+            <button class="span-two">=</button>
+
+
+    </div>
 </body>
 </html>
